<resources>
    <string name="app_name">PushDrawerLayout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scale_down_show_behavior">com.zs.itking.pushdrawerlayout.behavior.FloatingActionButton.ScaleDownShowBehavior</string>
    <string name="bottom_behavior">com.zs.itking.pushdrawerlayout.behavior.BottomNavigation.BottomNavigationBehavior</string>
    <string name="drawer_menu_info_school">进入官网</string>
    <string name="drawer_menu_my_collection">我的收藏</string>
    <string name="drawer_menu_night_mode">夜间模式</string>
    <string name="drawer_menu_about_we">关于我们</string>
    <string name="drawer_menu_logout_title">退出登录</string>
    <string name="drawer_menu_setting_title">软件设置</string>
    <string name="nav_view_login_show">登\t\t录</string>

    <string name="tab_home">首页</string>
    <string name="tab_me">我的</string>
    <string name="tab_category">分类</string>
    <string name="tab_cart">购物车</string>

</resources>