<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.zs.itking.pushdrawerlayout.base.library.BottomBarLayout
        android:id="@+id/bbl"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/tab_gb"
        android:gravity="center"
        android:orientation="horizontal">

        <com.zs.itking.pushdrawerlayout.base.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/tab_home"
            app:itemTextSize="10sp"
            app:lottieJson="home.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/selector_bg" />

        <com.zs.itking.pushdrawerlayout.base.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/tab_category"
            app:itemTextSize="10sp"
            app:lottieJson="category.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/selector_bg"
            app:unreadThreshold="999" />

        <com.zs.itking.pushdrawerlayout.base.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/tab_cart"
            app:itemTextSize="10sp"
            app:lottieJson="cart.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/selector_bg" />

        <com.zs.itking.pushdrawerlayout.base.library.BottomBarItem
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:iconHeight="30dp"
            app:iconWidth="30dp"
            app:itemText="@string/tab_me"
            app:itemTextSize="10sp"
            app:lottieJson="mine.json"
            app:openTouchBg="true"
            app:textColorNormal="@color/tab_normal_color"
            app:textColorSelected="@color/tab_selected_color"
            app:touchDrawable="@drawable/selector_bg" />

    </com.zs.itking.pushdrawerlayout.base.library.BottomBarLayout>
</LinearLayout>